パッケージロックファイルを更新、effitem対応、tsconfigにライブラリ追加
tsconfigのライブラリ追加はビルドエラー対応のため

--- a/packages/styles/src/core/_sidebar.scss
+++ b/packages/styles/src/core/_sidebar.scss
@@ -75,6 +75,16 @@ div.item-disp {
     left: 0;
 }
 
+.item-overwritten {
+    width: 40px;
+    height: 40px;
+    z-index: 0!important;
+}
+
+.item-transitioning {
+    z-index: 240!important;
+}
+
 .wide-button {
     @extend %wide_cell;
     cursor: pointer;
