--- a/packages/styles/src/core/_z-index.scss
+++ b/packages/styles/src/core/_z-index.scss
@@ -1,3 +1,8 @@
+/*
+ * z-index.css はIDで指定されている要素に対してのみ z-index を指定するSASSファイルです。
+ * アイテムボックスのエフェクトなど、一定条件で発生する、クラス指定の要素は別のSASSファイルをご利用ください。
+ */
+
 canvas#wwa-map {
   z-index: 100;
 }
