Chrome向けにバイブレーション機能追加
Squashed commit of the following:

commit a7338fe3828aa67097b516f48b29a5d0c3d45e7e
Merge: ca061e3 4716d20
Author: Matsuyuki <matsuyuki.eca@gmail.com>
Date:   Wed Feb 20 22:51:10 2019 +0900

    Merge pull request #91 from WWAWing/fix/mapid-table

    fix(mapIDTable): パスワードセーブが重い件を修正

commit 4716d20d26556f34628091286a5dbcc1589c4d75
Author: Matsuyuki/rmn. (@rmn_e) <matsuyuki.eca@gmail.com>
Date:   Wed Feb 20 22:41:51 2019 +0900

    docs(wwa_main): @see

commit ca061e3d935ba636ee2275b6b0bed510f5288a49
Author: Matsuyuki/rmn <matsuyuki.eca@gmail.com>
Date:   Mon Feb 18 00:49:04 2019 +0900

    型定義が衝突していたので修正

commit 8c4c26be5801dc0c260575083e0bc5fc0fa9555a
Author: Matsuyuki/rmn <matsuyuki.eca@gmail.com>
Date:   Sun Feb 17 21:45:42 2019 +0900

    fix(mapIDTable): パスワードセーブが重い件を修正 mapIDTableをWWADataから外す

commit ee02a7180582f1bf33b82d300c91906fead69cfa
Merge: a16129b c442d8e
Author: Aokashi <Aokashi.Towa@Gmail.com>
Date:   Sun Feb 17 16:11:21 2019 +0900

    Merge pull request #81 from WWAWing/chore/issue-template

    Update issue templates

commit c442d8ed9e4928827641fec8f8bfae78e7febf91
Author: Aokashi <Aokashi.Towa@Gmail.com>
Date:   Sun Feb 17 16:10:58 2019 +0900

    Update Default Issue Template

    不具合報告へ繋ぐURLを配置

commit 56cae76029096f0fff47664d199e2f90a4a14c98
Author: Aokashi <Aokashi.Towa@Gmail.com>
Date:   Sun Feb 17 16:06:38 2019 +0900

    Issueのデフォルトテンプレートを作成

commit 533f8fe26a5fff4c7a494425c9c7185d1dc79a92
Author: Aokashi <Aokashi.Towa@Gmail.com>
Date:   Sun Feb 17 15:48:47 2019 +0900

    Rename ----.md to bug.md

    ----.md は分かりにくいので

commit a16129b0a0c283dfec1304967935412aafb43d1d
Merge: 980c6cd eb64fd4
Author: Matsuyuki <matsuyuki.eca@gmail.com>
Date:   Sun Feb 17 13:58:03 2019 +0900

    Merge pull request #78 from WWAWing/refactor/bundle-crypto-js

    refactor(html):CryptoJSをdevでもバンドルする

commit eb64fd416e964eae865fada3588eea76e4f1e1ca
Author: Matsuyuki/rmn <matsuyuki.eca@gmail.com>
Date:   Tue Feb 12 00:19:41 2019 +0900

    ケツ

--- a/packages/assets/style/wwa_classic.css
+++ b/packages/assets/style/wwa_classic.css
@@ -266,6 +266,16 @@ div.item-disp {
     margin: 0px;
 }
 
+.item-overwritten {
+    width: 40px;
+    height: 40px;
+    z-index: 0 !important;
+}
+
+.item-transitioning {
+    z-index: 240 !important;
+}
+
 #disp-energy>.status-icon{
     z-index: 140;
 }
