--- a/packages/styles/src/core/_z-index.scss
+++ b/packages/styles/src/core/_z-index.scss
@@ -3,6 +3,10 @@
  * アイテムボックスのエフェクトなど、一定条件で発生する、クラス指定の要素は別のSASSファイルをご利用ください。
  */
 
+.wwa-yesno-wrapper {
+  z-index: 10;
+}
+
 canvas#wwa-map {
   z-index: 100;
 }
@@ -88,7 +92,9 @@ div#wwa-sidebar {
     z-index: 320;
   }
 }
-/* message window: z-index 400 */
+#wwa-text-message-window {
+  z-index: 400;
+}
 #wwa-audio-wrapper {
   z-index: -9999;
 }
