--- a/packages/styles/src/core/_main.scss
+++ b/packages/styles/src/core/_main.scss
@@ -12,6 +12,7 @@ $wwa_font_size: 16px;
     letter-spacing: 0px;
     word-spacing: 0px;
     writing-mode: horizontal-tb;
+    overflow: hidden;
 }
 
 div#wwa-wrapper {
