--- a/packages/styles/src/core/_z-index.scss
+++ b/packages/styles/src/core/_z-index.scss
@@ -98,9 +98,6 @@ div#wwa-sidebar {
 #wwa-audio-wrapper {
   z-index: -9999;
 }
-#wwa-virtualpad-left {
+.virtualpad_wrapper {
   z-index: 500;
-}
-#wwa-virtualpad-right {
-  z-index: 501;
 }
