--- a/packages/styles/src/core/_z-index.scss
+++ b/packages/styles/src/core/_z-index.scss
@@ -98,6 +98,9 @@ div#wwa-sidebar {
 #wwa-audio-wrapper {
   z-index: -9999;
 }
-.virtualpad_wrapper {
+#wwa-virtualpad-left {
   z-index: 500;
+}
+#wwa-virtualpad-right {
+  z-index: 501;
 }
