仮想パッドの各要素に pointer-events を設定、一部の要素のイベントキャンセル処理を削除

--- a/packages/styles/src/core/_virtualpad.scss
+++ b/packages/styles/src/core/_virtualpad.scss
@@ -23,6 +23,7 @@ $virtualpad-spacing: 1vmin;
 #wwa-virtualpad-right {
     bottom: $virtualpad-margin;
     position: fixed;
+    pointer-events: none;
 }
 
 #wwa-virtualpad-left {
@@ -54,6 +55,7 @@ $virtualpad-spacing: 1vmin;
 
 .wwa-virtualpad__button {
     @extend %virtualpad_button;
+    pointer-events: auto;
 }
 
 #wwa-up-button,
