--- a/packages/page-generator/template/wwa.pug
+++ b/packages/page-generator/template/wwa.pug
@@ -39,7 +39,8 @@ html(lang="ja")
                 data-wwa-mapdata=page.wwa.resources.mapdata,
                 data-wwa-audio-dir=page.wwa.resources.dir,
                 data-wwa-urlgate-enable=page.wwa.urlgateEnable ? "true" : "false",
-                data-wwa-title-img=page.wwa.resources.titleImg
+                data-wwa-title-img=page.wwa.resources.titleImg,
+                data-wwa-classic-mode-enable=wwa.classicModeEnable ? "true" : "false"
             )
     
         if page.copyrights
