feat(page-generator): オートセーブ対応

--- a/packages/page-generator/src/wwa.pug
+++ b/packages/page-generator/src/wwa.pug
@@ -21,6 +21,7 @@ html(lang="ja")
                 data-wwa-item-effect-enable=wwa.attributes["data-wwa-item-effect-enable"]
                 data-wwa-use-go-to-wwa=wwa.attributes["data-wwa-use-go-to-wwa"]
                 data-wwa-looking-around=wwa.attributes["data-wwa-looking-around"]
+                data-wwa-autosave=wwa.attributes["data-wwa-autosave"]
                 data-wwa-resume-savedata=wwa.attributes["data-wwa-resume-savedata"]
             )
     
