--- a/packages/styles/src/extends/classic/index.scss
+++ b/packages/styles/src/extends/classic/index.scss
@@ -4,7 +4,7 @@ $monospace_font: 'ＭＳ ゴシック', 'Osaka-mono', monospace;
 $sans-serif_font: 'ＭＳ Ｐゴシック', 'Osaka', sans-serif;
 
 $wwa_font_size: 18px;
-$wwa_sidebar_font_size: 18px;
+$wwa_wide_cell_font_size: 18px;
 
 .wwa-size-box {
     font-size: $wwa_font_size;
