--- a/packages/styles/src/core/_common.scss
+++ b/packages/styles/src/core/_common.scss
@@ -2,8 +2,10 @@
  * common は WWA Wing で共通で利用できるクラス名や mixin が含まれています。
  * UI 構築の際はこれらのセレクターもご活用ください。
  */
-$wwa_wide_cell_height: 35px;
-$wwa_wide_cell_font_size: 14px;
+$wwa_wide_cell_height: 35px !default;
+$wwa_wide_cell_font_size: 14px !default;
+
+$wwa_icon_width: 40px !default;
 
 %wide_cell {
     width: 120px;
