build(page-generator): GameOption に変数出力設定導入, 出力HTMLにコメント追加

--- a/packages/page-generator/src/wwa.pug
+++ b/packages/page-generator/src/wwa.pug
@@ -27,6 +27,7 @@ html(lang="ja")
             )
         
         if varDumpElement
+            // 下記 div 要素内に変数一覧が出ます。実際に公開する WWA では、変数一覧を表示させないよう、次の行は消してください。
             div(id=varDumpElement.id)
     
         if footer.copyrights
