refactor(style): deprecated 解消

--- a/packages/styles/src/core/_sidebar.scss
+++ b/packages/styles/src/core/_sidebar.scss
@@ -74,8 +74,8 @@ div.item-disp {
 
 
 // ここより位置設定 //
-$status: energy, strength, defence, gold;
-$menu_buttons: load, save, restart, gotowwa;
+$status: "energy", "strength", "defence", "gold";
+$menu_buttons: "load", "save", "restart", "gotowwa";
 
 $_y: 0;
 @each $status_name in $status {
