--- a/packages/styles/src/core/_z-index.scss
+++ b/packages/styles/src/core/_z-index.scss
@@ -19,10 +19,10 @@ div#wwa-sidebar {
 }
 
 @each $status, $number in (
-  energy: 0,
-  strength: 1,
-  defence: 2,
-  gold: 3
+  "energy": 0,
+  "strength": 1,
+  "defence": 2,
+  "gold": 3
   ) {
   #disp-#{$status} {
     z-index: 103 + $number;
