デフォルトマップ生成時にdata-wwa-user-variable-name-file属性を付与するよう調整
見様見真似なので間違ってるかも

--- a/packages/page-generator/src/wwa.pug
+++ b/packages/page-generator/src/wwa.pug
@@ -24,6 +24,7 @@ html(lang="ja")
                 data-wwa-autosave=wwa.attributes["data-wwa-autosave"]
                 data-wwa-resume-savedata=wwa.attributes["data-wwa-resume-savedata"]
                 data-wwa-var-dump-elm=wwa.attributes["data-wwa-var-dump-elm"]
+                data-wwa-user-variable-name-file=wwa.attributes["data-wwa-user-variable-name-file"]
             )
         
         if varDumpElement
