ページ生成時にdata-wwa-show-user-variableオプションを組み込みます

--- a/packages/page-generator/src/wwa.pug
+++ b/packages/page-generator/src/wwa.pug
@@ -25,6 +25,7 @@ html(lang="ja")
                 data-wwa-resume-savedata=wwa.attributes["data-wwa-resume-savedata"]
                 data-wwa-var-dump-elm=wwa.attributes["data-wwa-var-dump-elm"]
                 data-wwa-user-variable-name-file=wwa.attributes["data-wwa-user-variable-name-file"]
+                data-wwa-show-user-variable=wwa.attributes["data-wwa-show-user-variable"]
             )
         
         if varDumpElement
