feat(var-dump): 変数表示のエラー表示

--- a/packages/styles/src/core/_vardump.scss
+++ b/packages/styles/src/core/_vardump.scss
@@ -38,7 +38,8 @@
   }
 }
 
-.wwa-vardump-wrapper>table tr.var-val>td {
+.wwa-vardump-wrapper>table tr.var-val>td,
+.wwa-vardump-wrapper>table>td.varlist-information {
   background-color: #FFFFCC;
 }
 
