--- a/packages/page-generator/src/wwa.pug
+++ b/packages/page-generator/src/wwa.pug
@@ -26,7 +26,11 @@ html(lang="ja")
                 data-wwa-var-dump-elm=wwa.attributes["data-wwa-var-dump-elm"]
                 data-wwa-user-var-names-file=wwa.attributes["data-wwa-user-var-names-file"]
                 data-wwa-display-user-vars=wwa.attributes["data-wwa-display-user-vars"]
+                data-wwa-virtualpad-controller-elm=wwa.attributes["data-wwa-virtualpad-controller-elm"]
             )
+
+        if virtualPadController
+            div(id=virtualPadController.id)
         
         if varDumpElement
             // 下記 div 要素内に変数一覧が出ます。実際に公開する WWA では、変数一覧を表示させないよう、次の行は消してください。
