--- a/packages/styles/src/core/_virtualpad.scss
+++ b/packages/styles/src/core/_virtualpad.scss
@@ -173,3 +173,8 @@ $virtual-buttons-font-size-small: 25px;
 #wwa-fast-button {
     grid-area: fast;
 }
+
+#virtualpad-controller {
+    margin: 1rem;
+    text-align: center;
+}
