--- a/packages/page-generator/src/wwa.pug
+++ b/packages/page-generator/src/wwa.pug
@@ -26,7 +26,8 @@ html(lang="ja")
                 data-wwa-var-dump-elm=wwa.attributes["data-wwa-var-dump-elm"]
                 data-wwa-user-var-names-file=wwa.attributes["data-wwa-user-var-names-file"]
                 data-wwa-display-user-vars=wwa.attributes["data-wwa-display-user-vars"]
-                data-wwa-virtualpad=wwa.attributes["data-wwa-virtualpad"]
+                data-wwa-virtualpad-enable=wwa.attributes["data-wwa-virtualpad-enable"]
+                data-wwa-virtualpad-viewport-fit-enable=wwa.attributes["data-wwa-virtualpad-viewport-fit-enable"]
                 data-wwa-virtualpad-controller-elm=wwa.attributes["data-wwa-virtualpad-controller-elm"]
             )
 
